# book_shop_drf_p23_2

./: .env  .gitignore  Makefile  TODO.txt  pyproject.toml
apps/: urls.py
apps/shared/: models.py
apps/shops/: admin.py  models.py  serializers.py  urls.py  views.py
apps/shops/fixtures/: country.json
apps/shops/migrations/: 0001_initial.py  0002_rename_name_author_first_name_author_last_name_and_more.py  0003_remove_book_name_alter_book_slug.py
apps/users/: admin.py  backend.py  email_service.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/management/commands/: generate_data.py
apps/users/migrations/: 0001_initial.py  0002_loginattempt.py
root/: celery.py  drf_settings.py  settings.py  urls.py
